--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "morgan": "^1.10.0",
+    "node-fetch": "^2.6.1",
     "socket.io": "^4.1.2"
   },
   "devDependencies": {
